# quant-research

./: .gitignore  AGENTS.md  README.md  build_requirements.sh  environment.yml  pyproject.toml  requirements.txt  test_pipeline.py
.prompts/: binance_aggtrades.md  constraints.md  conventions.md
bitcoin_cycle/: alternative.py  analytics.ipynb  analytics.py  analytics_v2.ipynb  analytics_v3.py  bgeometrics.py  binance.py  download_all_data.py  download_data.py  explore_signal.ipynb  fetch_data.py  indicators.py  signals.py  test_signals.py  utils.py
bitcoin_cycle/downloader/: alternative.py  blockchain.py  funding_rate.py  ohlcv.py  sentiment.py
bitcoin_cycle/eda/: blockchain.py  fear_greed_index.py  (+2 more)
copilot/: conventions.md  models.md  notes.md  plan.md  tasks.md  todo.md
data/: US_interest_rates.csv  US_recession_indicator.csv  binance_btcusdt_1d.csv  binance_btcusdt_1h.csv  binance_daily_ohlcv.csv  binance_daily_ohlcv_2017.csv  binance_daily_ohlcv_2018.csv  binance_daily_ohlcv_2019.csv  binance_daily_ohlcv_2020.csv  binance_daily_ohlcv_2023.csv  bitstamp_btcusd_1d.csv  coingecko_coins.json  fear_greed_index.csv  high_yield_bond_rates.csv  yahoo_btcusd.csv
m2_predict_bitcoin/: m2_predict_bitcoin.ipynb  m2_predict_bitcoin_v2.ipynb
notebooks/: correlation.ipynb  cot.ipynb  cycle.ipynb  database.py  fear_greed_index.ipynb  funding_rate_arbitrage.ipynb  funding_rate_arbitrage2.ipynb  high_yield_credit.ipynb  hmm.ipynb  hmm_bitcoin.ipynb  indicators.py  liquidity.ipynb  market_regime.ipynb  monthly_yield.ipynb  ornstein_uhlenbeck.ipynb  relative_momentum.ipynb  short_reversal.ipynb  sth_mvrv.py  tga_balance.ipynb  volatility.ipynb
predict_bitcoin_regime/: 1_data.ipynb  2_target.ipynb  3_features.py  4_models.py  5_strategy.ipynb
refs/: binance_api_market_data.md
research/: US_yield_curve.ipynb  fear_greed_index.ipynb  indicators.py  liquidity.ipynb  relative_momentum.ipynb  volatility.ipynb
scripts/: binance_aggtrades_cli.py  binance_aggtrades_store.py  binance_ohlcv.py  binance_spot_ohlcv.py  coingecko_coins.py  exchange_ohlcv.py  fetch_binance_aggtrades.py  fetch_binance_funding_rates.py  fetch_binance_interest_rates.py  fetch_binance_ohlcv.py  fetch_exchange_ohlcv.py  fetch_fear_greed_index.py  fetch_liquidity.py  fetch_yahoo.py  markets.py  utils.py  yahoo_ohlcv.py
streamlit_app/: app.py  corr.py  correlation.py  indicators.py  rolling_corr.py  ta.py
(+154 files in other folders)
