[tool.poetry]
name = "quant-research"
version = "0.1.0"
description = ""
authors = ["scofieldchen <scofieldchen@163.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
pandas = "^2.2.2"
matplotlib = "^3.8.4"
seaborn = "^0.13.2"
pandas-datareader = "^0.10.0"
yfinance = "^0.2.38"
plotly = "^5.22.0"
python-dotenv = "^1.0.1"
ipykernel = "^6.29.4"
scipy = "^1.13.0"
jinja2 = "^3.1.3"
arch = "^7.0.0"
ccxt = "^4.4.5"
click = "^8.1.7"
rich = "^13.9.2"
streamlit = "^1.39.0"
ffn = "^1.1.1"
python-binance = "^1.0.22"
hmmlearn = "^0.3.3"
ta-lib = "^0.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
