[project]
name = "quant-research"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ccxt>=4.4.85",
    "ffn>=1.1.2",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "jinja2>=3.1.6",
    "marimo>=0.13.11",
    "matplotlib>=3.10.3",
    "nbformat>=5.10.4",
    "numpy>=2.2.6",
    "pandas>=2.2.3",
    "plotly>=6.1.1",
    "python-dotenv>=1.1.0",
    "rich>=14.0.0",
    "ruff>=0.11.11",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "ta-lib>=0.6.3",
    "tenacity>=9.1.2",
    "typer>=0.15.4",
    "watchdog>=6.0.0",
    "yfinance>=0.2.61",
]
