[project]
name = "quant-research"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair[all]>=6.0.0",
    "ccxt>=4.4.85",
    "duckdb>=1.4.3",
    "fastparquet>=2025.12.0",
    "ffn>=1.1.2",
    "hmmlearn>=0.3.3",
    "httpcore[socks]>=1.0.9",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "jinja2>=3.1.6",
    "kaleido>=1.2.0",
    "langchain>=1.2.4",
    "langchain-openai>=1.1.7",
    "loguru>=0.7.3",
    "marimo>=0.13.11",
    "matplotlib>=3.10.3",
    "nbformat>=5.10.4",
    "numpy>=2.2.6",
    "openai>=2.6.1",
    "pandas>=2.2.3",
    "plotly>=6.1.1",
    "pyarrow>=22.0.0",
    "python-dotenv>=1.1.0",
    "requests>=2.32.5",
    "rich>=14.0.0",
    "ruff>=0.11.11",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "socksio>=1.0.0",
    "statsmodels>=0.14.5",
    "tenacity>=9.1.2",
    "typer>=0.15.4",
    "watchdog>=6.0.0",
    "yfinance>=0.2.61",
]
